@@ -174,6 +174,13 @@ clash with new theory Quotient in Main HOL.
 
 *** ML ***
 
+* Antiquotations for type constructors:
+
+    @{type_name NAME}     -- logical type (as before)
+    @{type_abbrev NAME}   -- type abbreviation
+    @{nonterminal NAME}   -- type of concrete syntactic category
+    @{type_syntax NAME}   -- syntax representation of any of the above
+
 * Antiquotation @{syntax_const NAME} ensures that NAME refers to a raw
 syntax constant (cf. 'syntax' command).
 
